--- a/src/_modules/footer/footer.jade
+++ b/src/_modules/footer/footer.jade
@@ -2,7 +2,82 @@ mixin footer(spec)
 	- spec = spec || {}
 	- spec.__class = spec.__class || ''
 
-	div.row
-		div.columns.large-12
+	div.footer__container--light
+		div.row
+			div.columns.large-3
+				//-ald logo
+				div.footer__container--light__text Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.
+				//-legendairy logo
+			div.columns.large-2.large-offset-1
+				div.footer__container--light__title Fitness
+				ul.footer__container--light__list
+					li.footer__container--light__list__item
+						a.footer__container--light__list__item__link(href="#") Quisque retrum
+					li.footer__container--light__list__item
+						a.footer__container--light__list__item__link(href="#") Quisque retrum
+					li.footer__container--light__list__item
+						a.footer__container--light__list__item__link(href="#") Quisque retrum
+					li.footer__container--light__list__item
+						a.footer__container--light__list__item__link(href="#") Quisque retrum
+					li.footer__container--light__list__item
+						a.footer__container--light__list__item__link(href="#") Quisque retrum
+					li.footer__container--light__list__item
+						a.footer__container--light__list__item__link(href="#") Quisque retrum
+			div.columns.large-2
+				div.footer__container--light__title Health
+				ul.footer__container--light__list
+					li.footer__container--light__list__item
+						a.footer__container--light__list__item__link(href="#") Quisque retrum
+					li.footer__container--light__list__item
+						a.footer__container--light__list__item__link(href="#") Quisque retrum
+					li.footer__container--light__list__item
+						a.footer__container--light__list__item__link(href="#") Quisque retrum
+					li.footer__container--light__list__item
+						a.footer__container--light__list__item__link(href="#") Quisque retrum
+					li.footer__container--light__list__item
+						a.footer__container--light__list__item__link(href="#") Quisque retrum
+					li.footer__container--light__list__item
+						a.footer__container--light__list__item__link(href="#") Quisque retrum
+			div.columns.large-2
+				div.footer__container--light__title Food
+				ul.footer__container--light__list
+					li.footer__container--light__list__item
+						a.footer__container--light__list__item__link(href="#") Quisque retrum
+					li.footer__container--light__list__item
+						a.footer__container--light__list__item__link(href="#") Quisque retrum
+					li.footer__container--light__list__item
+						a.footer__container--light__list__item__link(href="#") Quisque retrum
+					li.footer__container--light__list__item
+						a.footer__container--light__list__item__link(href="#") Quisque retrum
+					li.footer__container--light__list__item
+						a.footer__container--light__list__item__link(href="#") Quisque retrum
+					li.footer__container--light__list__item
+						a.footer__container--light__list__item__link(href="#") Quisque retrum
+			div.columns.large-2
+				div.footer__container--light__title Contact
+				ul.footer__container--light__list
+					li.footer__container--light__list__item
+						a.footer__container--light__list__item__link(href="#") Quisque retrum
+					li.footer__container--light__list__item
+						a.footer__container--light__list__item__link(href="#") Quisque retrum
+					li.footer__container--light__list__item
+						a.footer__container--light__list__item__link(href="#") Quisque retrum
+					li.footer__container--light__list__item
+						a.footer__container--light__list__item__link(href="#") Quisque retrum
+					li.footer__container--light__list__item
+						a.footer__container--light__list__item__link(href="#") Quisque retrum
+					li.footer__container--light__list__item
+						a.footer__container--light__list__item__link(href="#") Quisque retrum
+	div.footer__container--dark
+		div.row
+			div.columns.large-6
+				div.footer__container--dark-left
+					div.footer__container--dark__text A Little Dash © 2016.
+					a.footer__container--dark__text(href="#") Terms & Conditions.
+					a.footer__container--dark__text(href="#") Privacy Policy.
+			div.columns.large-6
+				div.footer__container--dark-right
+					a.footer__container--dark__text(href="http://adelphi.digital") Website by Adelphi Digital.
 			
+
 		
