--- a/src/_styles/06_components/_components.footer.scss
+++ b/src/_styles/06_components/_components.footer.scss
@@ -1,3 +1,31 @@
 .footer{
-	
+	&__container{
+
+		&--light{
+			@include m-bgcolor('footer-light');
+
+			&__list{
+				margin: 0;
+				list-style: none;
+			}
+		}
+		&--dark{
+			@include m-bgcolor('footer-dark');
+
+			&-left{
+				display: flex;
+			}
+
+			&-right{
+				float: right;
+			}
+
+			&__text{
+				@include m-color('white');
+				&:nth-child(1n+2){
+					margin-left: 10px;
+				}
+			}
+		}
+	}	
 }
