--- a/src/_styles/main.scss
+++ b/src/_styles/main.scss
@@ -16,6 +16,7 @@
 @import "06_components/_components.column.scss";
 @import "06_components/_components.footer.scss";
 @import "06_components/_components.header.scss";
+@import "06_components/_components.media.scss";
 
 // Import Foundation Module
 @import "../../node_modules/foundation-sites/scss/foundation";
