--- a/src/index.jade
+++ b/src/index.jade
@@ -1,7 +1,17 @@
 extends _layouts/base
 
 block content
-	div.container
+	div.media__container
 		div.row
-			div.columns.large-12
-				
+			div.columns.large-7.large-centered
+				div.media__title Subscribe to our newsletter
+				div.media__text Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet direct to your inbox, for busy people.
+				div.media__button Send me daily cash
+				div.media__title Get social with us
+				div.media__social__container
+					div img
+					div img
+					div img
+					div img
+					div img
+
