--- a/src/_layouts/base.jade
+++ b/src/_layouts/base.jade
@@ -23,6 +23,8 @@ head
 	meta(name='description', content= 'A new Yeogurt application')
 	meta(name='viewport', content='width=device-width, initial-scale=1.0')
 	block stylesheets
+	link(rel='stylesheet', href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css")
+	link(rel='stylesheet', href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick-theme.css")
 	link(rel='stylesheet', href= baseUrl + 'styles/main.css')
 
 body
@@ -36,6 +38,7 @@ body
 
 	block scripts
 		script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.3/jquery.min.js")
+		script(src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js")
 		script(src= baseUrl + 'scripts/main.js')
 		script.
 			$(document).foundation();
