--- a/src/_styles/main.scss
+++ b/src/_styles/main.scss
@@ -17,6 +17,7 @@
 @import "06_components/_components.footer.scss";
 @import "06_components/_components.header.scss";
 @import "06_components/_components.media.scss";
+@import "06_components/_components.stories.scss";
 
 // Import Foundation Module
 @import "../../node_modules/foundation-sites/scss/foundation";
