--- a/src/index.jade
+++ b/src/index.jade
@@ -2,10 +2,11 @@ extends _layouts/base
 
 block content
 	div.container
-		div.foo
-			div 1
-			div 2
-			div 3
+		div.stories__container
+			div.stories__container__frame(stlye="background-color:red;") 1
+			div.stories__container__frame 2
+			div.stories__container__frame 3
+			div.stories__container__frame 4
 		div.media__container
 			div.row
 				div.columns.large-7.large-centered
