--- a/src/_styles/01_settings/_settings.colors.scss
+++ b/src/_styles/01_settings/_settings.colors.scss
@@ -2,6 +2,7 @@ $colors: (
 	'white': #fff,
 	'black': #000,
 	'media': #58A2D1,
+	'stories': #EBEBEB,
 	'footer-light': #E2E2E2,
 	'footer-dark': #333333
 );
