--- a/src/_modules/footer/footer.jade
+++ b/src/_modules/footer/footer.jade
@@ -6,6 +6,10 @@ mixin footer(spec)
 		div.row
 			div.columns.large-3
 				//-ald logo
+			div.columns.large-4.large-offset-5
+				//-social icons
+		div.row
+			div.columns.large-3
 				div.footer__container--light__text Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.
 				//-legendairy logo
 			div.columns.large-2.large-offset-1
