--- a/src/_styles/main.scss
+++ b/src/_styles/main.scss
@@ -16,8 +16,8 @@
 @import "06_components/_components.column.scss";
 @import "06_components/_components.footer.scss";
 @import "06_components/_components.header.scss";
-@import "06_components/_components.media.scss";
 @import "06_components/_components.stories.scss";
+@import "06_components/_components.subscribe.scss";
 
 // Import Foundation Module
 @import "../../node_modules/foundation-sites/scss/foundation";
