--- a/src/_styles/01_settings/_settings.colors.scss
+++ b/src/_styles/01_settings/_settings.colors.scss
@@ -1,7 +1,7 @@
 $colors: (
 	'white': #fff,
 	'black': #000,
-	'media': #58A2D1,
+	'subscribe': #58A2D1,
 	'stories': #EBEBEB,
 	'footer-light': #E2E2E2,
 	'footer-dark': #333333
