--- a/src/_styles/06_components/_components.footer.scss
+++ b/src/_styles/06_components/_components.footer.scss
@@ -10,7 +10,12 @@
 			}
 
 			&__text{
-				font-size: 13px;
+				font-size: 15px;
+			}
+
+			&__title{
+				font-size: 17px;
+				font-weight: 600;
 			}
 		}
 		&--dark{
