--- a/src/index.jade
+++ b/src/index.jade
@@ -7,17 +7,15 @@ block content
 			div.stories__container__frame 2
 			div.stories__container__frame 3
 			div.stories__container__frame 4
-		div.media__container
+		div.subscribe__container
 			div.row
 				div.columns.large-7.large-centered
-					div.media__title Subscribe to our newsletter
-					div.media__text Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet direct to your inbox, for busy people.
-					div.media__button Send me daily cash
-					div.media__title Get social with us
-					div.media__social__container
-						div img
-						div img
-						div img
-						div img
-						div img
+					div.subscribe__title Subscribe to our newsletter
+					div.subscribe__text Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet direct to your inbox, for busy people.
+					div.subscribe__text.subscribe__text--bold I'm interested in
+					div.subscribe__checkbox__container
+					form(action="/", method="post")
+						div.subscribe__input__container
+							input.subscribe__input
+							button.subscribe__input(type="submit")
 
