--- a/src/_layouts/base.jade
+++ b/src/_layouts/base.jade
@@ -39,6 +39,8 @@ body
 	block scripts
 		script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.3/jquery.min.js")
 		script(src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js")
+		script(src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.1.0/masonry.pkgd.min.js")
+		script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery-infinitescroll/2.1.0/jquery.infinitescroll.min.js")
 		script(src= baseUrl + 'scripts/main.js')
 		script.
 			$(document).foundation();
