--- a/src/index.jade
+++ b/src/index.jade
@@ -51,111 +51,24 @@ block content
 			div.columns.large-12
 				h1 Infinite Scrolling, Demo 1
 				.grid
-					.grid-item.grid-item-2
+					.grid-item.grid-item-2.challenge.Letteratura
 						p
 							| Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sed dignissim orci. Cras pellentesque eros eu lectus pulvinar, at tincidunt lorem malesuada. Suspendisse pulvinar auctor pretium. Nunc ornare mollis augue ac convallis.
-					.grid-item
+					.grid-item.challenge.Matematica
 						p
 							| Aenean orci purus, congue sed consequat interdum, dignissim sed dolor. Donec sed velit dolor. Ut accumsan, orci sed suscipit dignissim, erat massa pulvinar ex, vitae malesuada quam augue vel metus.
-					.grid-item
+					.grid-item.challenge.Letteratura
 						p
 							| Etiam tempor vestibulum turpis, eget ullamcorper eros. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum vel augue ac felis imperdiet convallis. Nam at libero vitae odio vehicula facilisis.
-					.grid-item
+					.grid-item.challenge.Matematica
 						p
 							| Donec nec velit ut enim dictum varius. Sed imperdiet, sem nec ultricies cursus, est ipsum semper nibh, a varius diam erat vitae turpis.
-					.grid-item
+					.grid-item.challenge.Scienza
 						p
 							| In quis lacinia magna. Proin eget dolor vestibulum, tincidunt neque vitae, rhoncus magna. Quisque suscipit venenatis urna at ornare. Integer mattis mi dui, a consectetur lectus iaculis at.
-					.grid-item.grid-item-3
+					.grid-item.grid-item-3.challenge.Scienza
 						p
 							| Donec vestibulum sapien tortor, eleifend viverra nulla feugiat at. Nullam facilisis est nec libero tincidunt volutpat. Integer quis elit rhoncus, fringilla quam vel, venenatis arcu. In hac habitasse platea dictumst. Nunc sed maximus nisi. Sed lacinia feugiat lorem non convallis. Sed vitae lectus at nunc elementum sagittis.
-					.grid-item
-						p
-							| Vivamus ante elit, posuere eget ipsum eu, convallis semper urna. Nullam sit amet ultrices quam. Duis in dictum risus, maximus vehicula neque.
-					.grid-item.grid-item-2
-						p
-							| Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sed dignissim orci. Cras pellentesque eros eu lectus pulvinar, at tincidunt lorem malesuada. Suspendisse pulvinar auctor pretium. Nunc ornare mollis augue ac convallis.
-					.grid-item
-						p
-							| Aenean orci purus, congue sed consequat interdum, dignissim sed dolor. Donec sed velit dolor. Ut accumsan, orci sed suscipit dignissim, erat massa pulvinar ex, vitae malesuada quam augue vel metus.
-					.grid-item
-						p
-							| Etiam tempor vestibulum turpis, eget ullamcorper eros. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum vel augue ac felis imperdiet convallis. Nam at libero vitae odio vehicula facilisis.
-					.grid-item
-						p
-							| Donec nec velit ut enim dictum varius. Sed imperdiet, sem nec ultricies cursus, est ipsum semper nibh, a varius diam erat vitae turpis.
-					.grid-item
-						p
-							| In quis lacinia magna. Proin eget dolor vestibulum, tincidunt neque vitae, rhoncus magna. Quisque suscipit venenatis urna at ornare. Integer mattis mi dui, a consectetur lectus iaculis at.
-					.grid-item.grid-item-3
-						p
-							| Donec vestibulum sapien tortor, eleifend viverra nulla feugiat at. Nullam facilisis est nec libero tincidunt volutpat. Integer quis elit rhoncus, fringilla quam vel, venenatis arcu. In hac habitasse platea dictumst. Nunc sed maximus nisi. Sed lacinia feugiat lorem non convallis. Sed vitae lectus at nunc elementum sagittis.
-					.grid-item
-						p
-							| Vivamus ante elit, posuere eget ipsum eu, convallis semper urna. Nullam sit amet ultrices quam. Duis in dictum risus, maximus vehicula neque.
-					.grid-item.grid-item-2
-						p
-							| Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sed dignissim orci. Cras pellentesque eros eu lectus pulvinar, at tincidunt lorem malesuada. Suspendisse pulvinar auctor pretium. Nunc ornare mollis augue ac convallis.
-					.grid-item
-						p
-							| Aenean orci purus, congue sed consequat interdum, dignissim sed dolor. Donec sed velit dolor. Ut accumsan, orci sed suscipit dignissim, erat massa pulvinar ex, vitae malesuada quam augue vel metus.
-					.grid-item
-						p
-							| Etiam tempor vestibulum turpis, eget ullamcorper eros. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum vel augue ac felis imperdiet convallis. Nam at libero vitae odio vehicula facilisis.
-					.grid-item
-						p
-							| Donec nec velit ut enim dictum varius. Sed imperdiet, sem nec ultricies cursus, est ipsum semper nibh, a varius diam erat vitae turpis.
-					.grid-item
-						p
-							| In quis lacinia magna. Proin eget dolor vestibulum, tincidunt neque vitae, rhoncus magna. Quisque suscipit venenatis urna at ornare. Integer mattis mi dui, a consectetur lectus iaculis at.
-					.grid-item.grid-item-2
-						p
-							| Donec vestibulum sapien tortor, eleifend viverra nulla feugiat at. Nullam facilisis est nec libero tincidunt volutpat. Integer quis elit rhoncus, fringilla quam vel, venenatis arcu. In hac habitasse platea dictumst. Nunc sed maximus nisi. Sed lacinia feugiat lorem non convallis. Sed vitae lectus at nunc elementum sagittis.
-					.grid-item
-						p
-							| Vivamus ante elit, posuere eget ipsum eu, convallis semper urna. Nullam sit amet ultrices quam. Duis in dictum risus, maximus vehicula neque.
-					.grid-item.grid-item-2
-						p
-							| Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sed dignissim orci. Cras pellentesque eros eu lectus pulvinar, at tincidunt lorem malesuada. Suspendisse pulvinar auctor pretium. Nunc ornare mollis augue ac convallis.
-					.grid-item
-						p
-							| Aenean orci purus, congue sed consequat interdum, dignissim sed dolor. Donec sed velit dolor. Ut accumsan, orci sed suscipit dignissim, erat massa pulvinar ex, vitae malesuada quam augue vel metus.
-					.grid-item
-						p
-							| Etiam tempor vestibulum turpis, eget ullamcorper eros. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum vel augue ac felis imperdiet convallis. Nam at libero vitae odio vehicula facilisis.
-					.grid-item
-						p
-							| Donec nec velit ut enim dictum varius. Sed imperdiet, sem nec ultricies cursus, est ipsum semper nibh, a varius diam erat vitae turpis.
-					.grid-item
-						p
-							| In quis lacinia magna. Proin eget dolor vestibulum, tincidunt neque vitae, rhoncus magna. Quisque suscipit venenatis urna at ornare. Integer mattis mi dui, a consectetur lectus iaculis at.
-					.grid-item.grid-item-2
-						p
-							| Donec vestibulum sapien tortor, eleifend viverra nulla feugiat at. Nullam facilisis est nec libero tincidunt volutpat. Integer quis elit rhoncus, fringilla quam vel, venenatis arcu. In hac habitasse platea dictumst. Nunc sed maximus nisi. Sed lacinia feugiat lorem non convallis. Sed vitae lectus at nunc elementum sagittis.
-					.grid-item
-						p
-							| Vivamus ante elit, posuere eget ipsum eu, convallis semper urna. Nullam sit amet ultrices quam. Duis in dictum risus, maximus vehicula neque.
-					.grid-item.grid-item-2
-						p
-							| Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sed dignissim orci. Cras pellentesque eros eu lectus pulvinar, at tincidunt lorem malesuada. Suspendisse pulvinar auctor pretium. Nunc ornare mollis augue ac convallis.
-					.grid-item
-						p
-							| Aenean orci purus, congue sed consequat interdum, dignissim sed dolor. Donec sed velit dolor. Ut accumsan, orci sed suscipit dignissim, erat massa pulvinar ex, vitae malesuada quam augue vel metus.
-					.grid-item
-						p
-							| Etiam tempor vestibulum turpis, eget ullamcorper eros. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum vel augue ac felis imperdiet convallis. Nam at libero vitae odio vehicula facilisis.
-					.grid-item
-						p
-							| Donec nec velit ut enim dictum varius. Sed imperdiet, sem nec ultricies cursus, est ipsum semper nibh, a varius diam erat vitae turpis.
-					.grid-item
-						p
-							| In quis lacinia magna. Proin eget dolor vestibulum, tincidunt neque vitae, rhoncus magna. Quisque suscipit venenatis urna at ornare. Integer mattis mi dui, a consectetur lectus iaculis at.
-					.grid-item.grid-item-3
-						p
-							| Donec vestibulum sapien tortor, eleifend viverra nulla feugiat at. Nullam facilisis est nec libero tincidunt volutpat. Integer quis elit rhoncus, fringilla quam vel, venenatis arcu. In hac habitasse platea dictumst. Nunc sed maximus nisi. Sed lacinia feugiat lorem non convallis. Sed vitae lectus at nunc elementum sagittis.
-					.grid-item
-						p
-							| Vivamus ante elit, posuere eget ipsum eu, convallis semper urna. Nullam sit amet ultrices quam. Duis in dictum risus, maximus vehicula neque.
 				nav#pagination
 					p
 						a(href='page-2.html') Page 2
