Masonry progress, filters work, but just not when you click more posts yet

--- a/src/index.jade
+++ b/src/index.jade
@@ -32,44 +32,43 @@ block content
 							div.subscribe__submit Send me daily dash
 		div.row
 			div.columns.large-12
-				.btn-toolbar.filters
-					.btn-group(data-toggle='buttons')
-						label.btn.btn-default
-							input(type='checkbox', value='Matematica')
-							|             Math
-						label.btn.btn-default
-							input(type='checkbox', value='Scienza')
-							|             Science
-						label.btn.btn-default
-							input(type='checkbox', value='Letteratura')
-							|             Literature
-					.btn-group(data-toggle='buttons')
-						label.btn.btn-default
-							input(type='checkbox', value='mine')
-							|             Mine
+				.asadasdadsljkhasd
+						label
+							input.filter__checkbox(type='checkbox', value='food')
+							| food
+						label
+							input.filter__checkbox(type='checkbox', value='fitness')
+							| fitness
+						label
+							input.filter__checkbox(type='checkbox', value='lifestyle')
+							| lifestyle
+						label
+							input.filter__checkbox(type='checkbox', value='all')
+							| ALL
 		div.row
 			div.columns.large-12
 				h1 Infinite Scrolling, Demo 1
 				.grid
-					.grid-item.grid-item-2.challenge.Letteratura
+					.grid-item.grid-item-2.food
 						p
-							| Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sed dignissim orci. Cras pellentesque eros eu lectus pulvinar, at tincidunt lorem malesuada. Suspendisse pulvinar auctor pretium. Nunc ornare mollis augue ac convallis.
-					.grid-item.challenge.Matematica
+							| food
+					.grid-item.lifestyle
 						p
-							| Aenean orci purus, congue sed consequat interdum, dignissim sed dolor. Donec sed velit dolor. Ut accumsan, orci sed suscipit dignissim, erat massa pulvinar ex, vitae malesuada quam augue vel metus.
-					.grid-item.challenge.Letteratura
+							| lifestyle
+					.grid-item.food
 						p
-							| Etiam tempor vestibulum turpis, eget ullamcorper eros. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum vel augue ac felis imperdiet convallis. Nam at libero vitae odio vehicula facilisis.
-					.grid-item.challenge.Matematica
+							| food
+					.grid-item.lifestyle
 						p
-							| Donec nec velit ut enim dictum varius. Sed imperdiet, sem nec ultricies cursus, est ipsum semper nibh, a varius diam erat vitae turpis.
-					.grid-item.challenge.Scienza
+							| lifestyle
+					.grid-item.fitness
 						p
-							| In quis lacinia magna. Proin eget dolor vestibulum, tincidunt neque vitae, rhoncus magna. Quisque suscipit venenatis urna at ornare. Integer mattis mi dui, a consectetur lectus iaculis at.
-					.grid-item.grid-item-3.challenge.Scienza
+							| fitness
+					.grid-item.grid-item-3.food
 						p
-							| Donec vestibulum sapien tortor, eleifend viverra nulla feugiat at. Nullam facilisis est nec libero tincidunt volutpat. Integer quis elit rhoncus, fringilla quam vel, venenatis arcu. In hac habitasse platea dictumst. Nunc sed maximus nisi. Sed lacinia feugiat lorem non convallis. Sed vitae lectus at nunc elementum sagittis.
+							| food
 				nav#pagination
 					p
 						a(href='page-2.html') Page 2
 				div.foo moar pls
+				div.bar what
