--- a/src/_styles/06_components/_components.subscribe.scss
+++ b/src/_styles/06_components/_components.subscribe.scss
@@ -139,26 +139,38 @@ $c2: #e84a69;
 }
 
 .grid {
-	margin: 0 2em 2em;
-	padding: 1em;
-	background-color: #FFFFFF;
+  background: #EEE;
+  //max-width: 1200px;
+}
+
+/* clearfix */
+.grid:after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
+/* ---- grid-item ---- */
+
+.grid-sizer,
+.grid-item {
+  width: 48.27586206896552%;
+  margin-bottom: 3.44827586206897%;
+}
+
+.gutter-sizer{
+	width: 3.44827586206897%;
 }
 
 .grid-item {
-	padding: 15px;
-	width: 200px;
+  height: 480px;
+  float: left;
+  background: #D26;
+  border: 2px solid #333;
+  border-color: hsla(0, 0%, 0%, 0.5);
+  border-radius: 5px;
 }
 
-.grid-item-2 {
-	width: 400px;
-}
-
-.grid-item-3 {
-	width: 600px;
-}
-
-.grid-item p {
-	margin: 0;
-	padding: 0.5em;
-	background-color: #F0F0F0;
-}
+.grid-item-2 { width: 100%; }
+.grid-item-3 { width: 65.5171724138%; }
+.grid-item-4 { width: 31.03448275862069%; }
