--- a/src/index.jade
+++ b/src/index.jade
@@ -49,6 +49,14 @@ block content
 			div.columns.large-12
 				h1 Infinite Scrolling, Demo 1
 				.grid
+					.grid-sizer
+					.gutter-sizer
+					.grid-item.grid-item-4.lifestyle
+						p
+							| lifestyle
+					.grid-item.grid-item-4.lifestyle
+						p
+							| lifestyle
 					.grid-item.grid-item-2.food
 						p
 							| food
@@ -67,6 +75,24 @@ block content
 					.grid-item.grid-item-3.food
 						p
 							| food
+					.grid-item.grid-item-4.lifestyle
+						p
+							| lifestyle
+					.grid-item.grid-item-3.lifestyle
+						p
+							| lifestyle
+					.grid-item.lifestyle
+						p
+							| lifestyle
+					.grid-item.grid-item-3.lifestyle
+						p
+							| lifestyle
+					.grid-item.grid-item-4.lifestyle
+						p
+							| lifestyle
+					.grid-item.grid-item-4.lifestyle
+						p
+							| lifestyle
 				nav#pagination
 					p
 						a(href='page-2.html') Page 2
