--- a/src/index.jade
+++ b/src/index.jade
@@ -60,27 +60,15 @@ block content
 					.grid-item.food
 						p
 							| food
-					.grid-item.lifestyle
-						p
-							| lifestyle
 					.grid-item.fitness
 						p
 							| fitness
 					.grid-item.grid-item-3.food
 						p
 							| food
-					.grid-item.grid-item-4.lifestyle
+					.grid-item.fitness
 						p
-							| lifestyle
-					.grid-item.grid-item-3.lifestyle
-						p
-							| lifestyle
-					.grid-item.lifestyle
-						p
-							| lifestyle
-					.grid-item.grid-item-3.lifestyle
-						p
-							| lifestyle
+							| fitness
 					.grid-item.grid-item-4.lifestyle
 						p
 							| lifestyle
