Add packery, this seems to fix the problem that small fittable blocks are not going into above rows
But if it leaves space that is too small, of course it won't use the best clock

--- a/src/_layouts/base.jade
+++ b/src/_layouts/base.jade
@@ -41,6 +41,7 @@ body
 		script(src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js")
 		script(src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.1.0/masonry.pkgd.min.js")
 		script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery-infinitescroll/2.1.0/jquery.infinitescroll.min.js")
+		script(src="https://npmcdn.com/packery@2.1/dist/packery.pkgd.min.js")
 		script(src= baseUrl + 'scripts/main.js')
 		script.
 			$(document).foundation();
