--- a/src/index.jade
+++ b/src/index.jade
@@ -75,6 +75,30 @@ block content
 					.grid-item.grid-item-4.lifestyle
 						p
 							| lifestyle
+					.grid-item.grid-item-3.food
+						p
+							| food
+					.grid-item.grid-item-3.food
+						p
+							| food
+					.grid-item.grid-item-3.food
+						p
+							| food
+					.grid-item.grid-item-3.food
+						p
+							| food
+					.grid-item.grid-item-3.food
+						p
+							| food
+					.grid-item.food
+						p
+							| food
+					.grid-item.food
+						p
+							| food
+					.grid-item.food
+						p
+							| food
 				nav#pagination
 					p
 						a(href='page-2.html') Page 2
