--- a/src/_styles/main.scss
+++ b/src/_styles/main.scss
@@ -13,6 +13,7 @@
 @import "02_tools/_tools.mixin.mq.scss";
 @import "02_tools/_tools.mixin.zindex.scss";
 @import "03_generic/_generic.fonts.scss";
+@import "06_components/_components.article.scss";
 @import "06_components/_components.column.scss";
 @import "06_components/_components.footer.scss";
 @import "06_components/_components.header.scss";
