--- a/src/_styles/01_settings/_settings.colors.scss
+++ b/src/_styles/01_settings/_settings.colors.scss
@@ -5,5 +5,8 @@ $colors: (
 	'subscribe-btn': #666666,
 	'stories': #EBEBEB,
 	'footer-light': #E2E2E2,
-	'footer-dark': #333333
+	'footer-dark': #333333,
+	'lifestyle': #DB9AC4,
+	'fitness': #F6A661,
+	'food': #4CC0B7
 );
