--- a/src/_styles/04_base/_base.scss
+++ b/src/_styles/04_base/_base.scss
@@ -12,6 +12,12 @@
  	}
  }
 
+ p{
+ 	&:last-child{
+ 		margin-bottom: 0;
+ 	}
+ }
+
 /*::-moz-selection {
     background: #b3d4fc;
     text-shadow: none;
