--- a/src/index.jade
+++ b/src/index.jade
@@ -53,8 +53,11 @@ block content
 					.gutter-sizer
 					.grid-item.grid-item-2.lifestyle
 						a.article__link(href="#")
-							div.article__tag LIFESTYLE
 							div.article__img
+								div.article__tag__container--outer
+									div.article__tag__container--inner
+										img.article__icon(src="favicon.ico")
+										div.article__tag LIFESTYLE
 							div.article__text__container--outer
 								div.article__text__container--inner
 									h2.article__title Practising everyday mindfulness
