--- a/src/_styles/06_components/_components.article.scss
+++ b/src/_styles/06_components/_components.article.scss
@@ -6,18 +6,53 @@
 		position: relative;
 		height: 100%;
 		overflow: hidden;
+
+		&:hover{
+			.article__tag__container--outer{
+				height: 100%;
+				width: 100%;
+				transition: all 0.3s;
+			}
+			.article__icon{
+				display: inline;
+			}
+		}
+	}
+
+	// {{article__icon}}
+	&__icon{
+		text-align: center;
+		display: none;
 	}
 
 	//{{article__tag}}
 	&__tag{
-		@include m-color('white');
-		position: absolute;
-		padding: 5px;
-		font-size: 14px;
-		font-weight: 600;
+		
+		//{{article__tag__container}}
+		&__container{
 
-		.lifestyle &{
-			@include m-bgcolor('lifestyle');
+			//{{article__tag__container--outer}}
+			&--outer{
+				@include m-color('white');
+				padding: 5px;
+				font-size: 14px;
+				font-weight: 600;
+				display: flex;
+				width: 11.842117728%;
+				height: 7%;
+				justify-content: center;
+				align-items: center;
+				transition: all 0.3s;
+
+				.lifestyle &{
+					@include m-bgcolor('lifestyle');
+				}
+			}
+
+			//{{article__tag__container--inner}}
+			&--inner{
+				text-align: center;
+			}
 		}
 	}
 
@@ -31,7 +66,7 @@
 
 	//{{article__text}}
 	&__text{
-		@include m-color('white');
+		@include m-color('black');
 
 		//{{article__text__container}}
 		&__container{
@@ -55,6 +90,6 @@
 
 	//{{article__title}}
 	&__title{
-		@include m-color('white');
+		@include m-color('black');
 	}
 }
