--- a/src/index.jade
+++ b/src/index.jade
@@ -51,7 +51,7 @@ block content
 				.grid
 					.grid-sizer
 					.gutter-sizer
-					.grid-item.grid-item-2.lifestyle
+					.grid-item.grid-item-2.article--full.lifestyle
 						a.article__link(href="#")
 							div.article__img
 								div.article__tag__container--outer
@@ -63,9 +63,13 @@ block content
 									h2.article__title Practising everyday mindfulness
 									p.article__text Suspendisse pulvinar, augue ac venenatis condimentum, sem libero volutpat nibh, nec pellentesque velit pede quis nunc.
 									p.article__text Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-					.grid-item.fitness
-						p
-							| fitness
+					.grid-item.article--small--full.fitness
+						a.article__link(href="#")
+							div.article__img
+								div.article__tag__container--outer
+									div.article__tag__container--inner
+										img.article__icon(src="favicon.ico")
+										div.article__tag FITNESS
 					.grid-item.lifestyle
 						p
 							| lifestyle
