--- a/src/_styles/06_components/_components.article.scss
+++ b/src/_styles/06_components/_components.article.scss
@@ -7,12 +7,24 @@
 		height: 100%;
 		overflow: hidden;
 
+		// Hover tag expand full and reduce opacity
 		&:hover{
 			.article__tag__container--outer{
 				height: 100%;
 				width: 100%;
 				transition: all 0.3s;
-				background-color: rgba(219, 154, 196, 0.8);
+
+				.lifestyle &{
+					background-color: rgba(219, 154, 196, 0.8);
+				}
+
+				.fitness &{
+					background-color: rgba(246, 166, 97, 0.8);
+				}
+
+				.food &{
+					background-color: rgba(76, 192, 183, 0.8);
+				}
 			}
 			.article__icon{
 				display: inline;
@@ -39,14 +51,29 @@
 				font-size: 14px;
 				font-weight: 600;
 				display: flex;
-				width: 11.842117728%;
 				height: 7%;
 				justify-content: center;
 				align-items: center;
 				transition: all 0.3s;
 
+				.article--full &{
+					width: 11.842117728%;
+				}
+
+				.article--small--full &{
+					width: 25%;
+				}
+
 				.lifestyle &{
 					@include m-bgcolor('lifestyle');
+				}
+
+				.fitness &{
+					@include m-bgcolor('fitness');
+				}
+
+				.food &{
+					@include m-bgcolor('food');
 				}
 			}
 
@@ -59,12 +86,25 @@
 
 	//{{article__img}}
 	&__img{
-		background-color: #58A2D1;
-		width: 100%;
+
+		.article--full &{	
+			background-color: #58A2D1;
+			width: 100%;
+
+			@include mq(large){
+				width: 65.5171724138%;
+				float: left;
+			}
+		}
+
+		.article--small--full &{	
+			background-color: #58A2D1;
+			position: absolute;
+			width: 100%;
+			height: 100%;
+		}
 
 		@include mq(large){
-			width: 65.5171724138%;
-			float: left;
 			height: 100%;
 		}
 	}
