--- a/src/_styles/06_components/_components.article.scss
+++ b/src/_styles/06_components/_components.article.scss
@@ -62,6 +62,8 @@
 
 				.article--small--full &{
 					width: 25%;
+					position: absolute;
+					z-index: 1;
 				}
 
 				.lifestyle &{
@@ -87,7 +89,7 @@
 	//{{article__img}}
 	&__img{
 
-		.article--full &{	
+		.article--full &{
 			background-color: #58A2D1;
 			width: 100%;
 
@@ -111,22 +113,42 @@
 
 	//{{article__text}}
 	&__text{
-		@include m-color('black');
+		.article--full &{
+			@include m-color('black');
+		}
+		.article--small--full &{
+			@include m-color('white');
+		}
 
 		//{{article__text__container}}
 		&__container{
 
 			//{{article__text__container--outer}}
 			&--outer{
-				width: 100%;
-				height: 100%;
-				display: flex;
-				align-items: flex-end;
-				padding: 3.44827586206897%;
 
-				@include mq(large){
-					width: 34.48275862068966%;
-					float: right;
+				.article--full &{
+					width: 100%;
+					height: 100%;
+					display: flex;
+					align-items: flex-end;
+					padding: 3.44827586206897%;
+
+					@include mq(large){
+						width: 34.48275862068966%;
+						float: right;
+					}
+				}
+
+				.article--small--full &{
+					width: 100%;
+					height: 100%;
+					display: flex;
+					align-items: flex-end;
+					padding: 3.44827586206897%;
+
+					@include mq(large){
+						position: absolute;
+					}
 				}
 			}
 
@@ -139,6 +161,11 @@
 
 	//{{article__title}}
 	&__title{
-		@include m-color('black');
+		.article--full &{
+			@include m-color('black');
+		}
+		.article--small--full &{
+			@include m-color('white');
+		}
 	}
 }
